<resources>
    <string name="app_name">Android-HIT</string>
    <string name="tagline_awal">One Touch Solution for Your Budgeting</string>
    <string name="desc_tagline_awal">Overbudget? Don’t worry! With us, managing your income and expanses is only one touch away</string>
    <string name="login">Login</string>
    <string name="login_into">Login to your account</string>
    <string name="greet">Hi!</string>
    <string name="password">Password </string>
    <string name="email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment_transaction">Transaction</string>
    <string name="fragment_settings">Settings</string>
    <string name="fragment_graphs">Graphs</string>
    <string name="fragment_scan">Scan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>